src/snapshots/afrotd__parser__tests__interpretation_3.3.2_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 3
  - 2
index: 3
text: "3. und 4. Team A’s Pass wird durch B1 abgefangen und B1 wird\nim Spielfeld zu Boden gebracht. B2 war während des Spieles Offside."
ruling: "Team A’s Ball. First Down und 10. Die Game Clock startet\nbeim Signal des Referees. Obwohl die Game Clock angehalten wurde, um Team B ein First Down zuzuerkennen, führt Team B nicht den\nnächsten Snap durch."
