src/snapshots/afrotd__parser__tests__interpretation_3.3.2_4.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 3
  - 2
index: 4
text: "Zu einem späten Zeitpunkt in der zweiten oder vierten Spielperiode geht der Ballträger während eines Downs ins Aus. Die Game\nClock wird angehalten, a) vor dem Zwei-Minuten-Timeout; b) bei oder\nnach dem Zwei-Minuten-Timeout."
ruling: "Die Game Clock startet\n(a) beim Signal des Referees; (b) mit dem Snap."
