src/snapshots/afrotd__parser__tests__interpretation_3.3.2_5.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 3
  - 2
index: 5
text: "2. und 8 in der zweiten oder der vierten Spielperiode. B44 fängt\neinen legalen Vorwärtspass ab und trägt den Ball ins Aus. B79 befand\nsich beim Snap in der neutralen Zone. Die Game Clock wird angehalten, a) vor dem Zwei-Minuten-Timeout; b) für das Zwei-Minuten-Timeout."
ruling: "Team A nimmt die Strafe an und bleibt in Ballbesitz. In\na) startet die Game Clock mit dem Signal des Referees, denn Team B\nführt nicht den nächsten Snap durch. In b) startet die Game Clock mit\ndem Snap nach dem Zwei-Minuten-Timeout."
