src/snapshots/afrotd__parser__tests__interpretation_3.3.2_6.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 3
  - 2
index: 6
text: "4. und 8 von der A-12 spät in der vierten Spielperiode. Der Punt\nwird geblockt und der Ball überquert nicht die neutrale Zone. An der A10 recovert Back A22 den Ball und wirft einen Vorwärtspass auf den\nberechtigten A88, der an der B-3 getackelt wird. Die Game Clock steht\nbei 0:03."
ruling: "Team A’s Ball an der B-3, 1. und Goal. Die Game\nClock startet wegen des legalen Kicks mit dem Snap (Regeln 3.3.2.d.8,\n3.3.2.e.1, 3.3.2.f)."
