src/snapshots/afrotd__parser__tests__interpretation_3.3.5_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 3
  - 5
index: 1
text: "Am Ende eines Spieles und bei laufender Game Clock entdeckt\nder Referee, dass A22 blutet."
ruling: "Der Referee hält die Game\nClock an und gibt ein Verletzungs-Timeout bekannt. A22 muss das Feld\nverlassen, damit er vom medizinischen Personal entsprechend versorgt\nwerden kann. Solange nicht ebenfalls ein Team B Spieler verletzt wurde, wird die Play Clock auf 25 Sekunden gesetzt und startet mit der\nBallfreigabe (Regel 3.2.4.c.5)."
