src/snapshots/afrotd__parser__tests__interpretation_3.3.5_4.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 3
  - 5
index: 4
text: "Ein Schiedsrichter entdeckt, dass das Trikot von B10 mit Blut\ndurchtränkt ist."
ruling: "B10 muss das Spiel verlassen, bis durch\ndas medizinische Personal festgestellt wurde, ob das Trikot gewechselt\nwerden muss."
